--- a/SeleniumBasics/SeleniumBasics/packages.config
+++ b/SeleniumBasics/SeleniumBasics/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Selenium.Firefox.WebDriver" version="0.15.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver" version="3.3.0" targetFramework="net452" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net452" />
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net452" />
+  <package id="Selenium.Firefox.WebDriver" version="0.26.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="84.0.4147.3001" targetFramework="net452" />
 </packages>
